--- a/Transfer_learning/Intro/models_tests.ipynb
+++ b/Transfer_learning/Intro/models_tests.ipynb
@@ -711,7 +711,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('tensorflow_m1')",
+   "display_name": "tensorflow_m1",
    "language": "python",
    "name": "python3"
   },
@@ -725,7 +725,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 | packaged by conda-forge | (main, May 27 2022, 17:00:33) \n[Clang 13.0.1 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
