--- a/Data_collection/test_youtuube_scraping.ipynb
+++ b/Data_collection/test_youtuube_scraping.ipynb
@@ -117,9 +117,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tensorflow_m1",
+   "display_name": "Python 3.9 (tensorflow)",
    "language": "python",
-   "name": "python3"
+   "name": "tensorflow_m1"
   },
   "language_info": {
    "codemirror_mode": {
