Still downloading videos

--- a/Data_collection/test_video_download.ipynb
+++ b/Data_collection/test_video_download.ipynb
@@ -65,6 +65,83 @@
     "    stream = youtube_video.streams.get_by_itag(137)\n",
     "    stream.download(output_path = path, filename = name)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from __future__ import unicode_literals\n",
+    "import youtube_dl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/pauor506/Documents/CDHU/June2022:Dec2022/Pilots/Youtube_Katrin/Code/Data_collection\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[youtube] OYS2pt9DVsY: Downloading webpage\n",
+      "[youtube] OYS2pt9DVsY: Downloading MPD manifest\n",
+      "[download] Destination: Reunión MARM-OPAs medidas de apoyo a la ganadería-OYS2pt9DVsY.mp4\n",
+      "[download] 100% of 79.37MiB in 23:3833KiB/s ETA 00:004\n"
+     ]
+    }
+   ],
+   "source": [
+    "ydl_opts = {}\n",
+    "with youtube_dl.YoutubeDL(ydl_opts) as ydl:\n",
+    "    ydl.download(['https://www.youtube.com/watch?v=OYS2pt9DVsY'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[youtube] b4vPOoDtttE: Downloading webpage\n",
+      "[youtube] b4vPOoDtttE: Downloading MPD manifest\n",
+      "[download] Destination: El sector se une en defensa del aceite de oliva-b4vPOoDtttE.mp4\n",
+      "[download] 100% of 47.33MiB in 17:1003KiB/s ETA 00:001\n"
+     ]
+    }
+   ],
+   "source": [
+    "with youtube_dl.YoutubeDL(ydl_opts) as ydl:\n",
+    "    ydl.download(['https://www.youtube.com/watch?v=b4vPOoDtttE'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -83,7 +160,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 | packaged by conda-forge | (main, May 27 2022, 17:00:33) \n[Clang 13.0.1 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
