--- a/prototyping/video_metadata.ipynb
+++ b/prototyping/video_metadata.ipynb
@@ -16,13 +16,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "file_test = 'video_urls_FULL.csv'\n",
     "df = pd.read_csv(file_test)\n",
     "df = df.drop(columns='Unnamed: 0')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(46532, 2)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
    ]
   },
   {
