Revert "Changing branches"
This reverts commit 4d5148ea10a4a9767216509a346a2aa522bf5541.

--- a/Data_collection/video_metadata.ipynb
+++ b/Data_collection/video_metadata.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,13 +13,6 @@
     "from collections import defaultdict\n",
     "import os"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -396,32 +389,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Video_url = 'https://www.youtube.com/watch?v=7_aDAnpOak4'\n",
+    "ch_name = 'b4vPOoDtttE.mp4'\n",
+    "Video_url = 'https://www.youtube.com/watch?v=OYS2pt9DVsY'\n",
+    "Folder = '/Users/pauor506/Documents/CDHU/June2022:Dec2022/Pilots/Youtube_Katrin/Code/Data_collection/Videos/UPA_Federal/'\n",
     "\n",
     "yt = YouTube(Video_url)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,16 +412,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "137"
+       "136"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,18 +432,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'/Users/pauor506/Documents/CDHU/June2022:Dec2022/Pilots/Youtube_Katrin/Code/Data_collection/Probamos los collares de geolocalización de ganado de Digitanimal en Soria.mp4'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "'content-length'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m/Users/pauor506/Documents/CDHU/June2022:Dec2022/Pilots/Youtube_Katrin/Code/Data_collection/video_metadata.ipynb Cell 10\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/pauor506/Documents/CDHU/June2022%3ADec2022/Pilots/Youtube_Katrin/Code/Data_collection/video_metadata.ipynb#X41sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m stream\u001b[39m.\u001b[39;49mdownload()\n",
+      "File \u001b[0;32m~/opt/miniconda3/envs/tensorflow_m1/lib/python3.9/site-packages/pytube/streams.py:309\u001b[0m, in \u001b[0;36mStream.download\u001b[0;34m(self, output_path, filename, filename_prefix, skip_existing, timeout, max_retries)\u001b[0m\n\u001b[1;32m    306\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mon_complete(file_path)\n\u001b[1;32m    307\u001b[0m     \u001b[39mreturn\u001b[39;00m file_path\n\u001b[0;32m--> 309\u001b[0m bytes_remaining \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mfilesize\n\u001b[1;32m    310\u001b[0m logger\u001b[39m.\u001b[39mdebug(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mdownloading (\u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfilesize\u001b[39m}\u001b[39;00m\u001b[39m total bytes) file to \u001b[39m\u001b[39m{\u001b[39;00mfile_path\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m)\n\u001b[1;32m    312\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(file_path, \u001b[39m\"\u001b[39m\u001b[39mwb\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mas\u001b[39;00m fh:\n",
+      "File \u001b[0;32m~/opt/miniconda3/envs/tensorflow_m1/lib/python3.9/site-packages/pytube/streams.py:157\u001b[0m, in \u001b[0;36mStream.filesize\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    155\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_filesize \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m    156\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m--> 157\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_filesize \u001b[39m=\u001b[39m request\u001b[39m.\u001b[39;49mfilesize(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49murl)\n\u001b[1;32m    158\u001b[0m     \u001b[39mexcept\u001b[39;00m HTTPError \u001b[39mas\u001b[39;00m e:\n\u001b[1;32m    159\u001b[0m         \u001b[39mif\u001b[39;00m e\u001b[39m.\u001b[39mcode \u001b[39m!=\u001b[39m \u001b[39m404\u001b[39m:\n",
+      "File \u001b[0;32m~/opt/miniconda3/envs/tensorflow_m1/lib/python3.9/site-packages/pytube/request.py:200\u001b[0m, in \u001b[0;36mfilesize\u001b[0;34m(url)\u001b[0m\n\u001b[1;32m    193\u001b[0m \u001b[39m@lru_cache\u001b[39m()\n\u001b[1;32m    194\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mfilesize\u001b[39m(url):\n\u001b[1;32m    195\u001b[0m     \u001b[39m\"\"\"Fetch size in bytes of file at given URL\u001b[39;00m\n\u001b[1;32m    196\u001b[0m \n\u001b[1;32m    197\u001b[0m \u001b[39m    :param str url: The URL to get the size of\u001b[39;00m\n\u001b[1;32m    198\u001b[0m \u001b[39m    :returns: int: size in bytes of remote file\u001b[39;00m\n\u001b[1;32m    199\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 200\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mint\u001b[39m(head(url)[\u001b[39m\"\u001b[39;49m\u001b[39mcontent-length\u001b[39;49m\u001b[39m\"\u001b[39;49m])\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'content-length'"
+     ]
     }
    ],
    "source": [
@@ -507,7 +492,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 | packaged by conda-forge | (main, May 27 2022, 17:00:33) \n[Clang 13.0.1 ]"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
